# bitcoin-trader

./: .gitignore  CLAUDE.md  History.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.json
Manual/: auto-trading.md  market-data.md  simulation.md  strategy-v3.1-trade-value.md  strategy-v5-enhanced-adaptive.md
public/: manifest.json  sw.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  bitcoin_trader.db-shm  bitcoin_trader.db-wal  tauri.conf.json  v3_optimized_clean.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql  002_users.sql  003_day_psy.sql  004_opt_metrics.sql  005_opt_indexes.sql
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/api/: mod.rs  upbit.rs
src-tauri/src/auth/: crypto.rs  mod.rs  password.rs  session.rs
src-tauri/src/commands/: auth.rs  data.rs  migration.rs  mod.rs  notification.rs  optimization.rs  simulation.rs  trading.rs
src-tauri/src/core/: day_psy_store.rs  engine.rs  indicators.rs  mod.rs  optimizer.rs  signals.rs
src-tauri/src/core/ml/: features.rs  mod.rs  model.rs  trainer.rs
src-tauri/src/db/: mod.rs  paths.rs  schema.rs
src-tauri/src/migration/: csv_import.rs
src-tauri/src/models/: config.rs  market.rs  mod.rs  trading.rs
src-tauri/src/notifications/: discord.rs  fcm.rs  manager.rs  mod.rs  telegram.rs
src-tauri/src/server/: middleware.rs  mod.rs  routes.rs  ws.rs
src-tauri/src/services/: auto_trader.rs  market_updater.rs  mod.rs
src-tauri/src/strategies/: enhanced_adaptive.rs  enhanced_volume.rs  ml_strategy.rs  mod.rs  multi_indicator.rs  regime_adaptive.rs  regime_adaptive_v31.rs  volume_decay.rs
src-tauri/tests/: engine_test.rs  indicators_test.rs  integration_test.rs  optimizer_test.rs  phase4_integration_test.rs  scenario_tests.rs  strategy_test.rs  v31_strategy_test.rs  v3_legacy_config_test.rs  v5_enhanced_adaptive_test.rs
(+28 files in other folders)
