[package]
name = "bitcoin-trader"
version = "0.1.0"
description = "Bitcoin Trading System"
authors = ["fairlabs"]
edition = "2021"

[lib]
name = "bitcoin_trader_lib"
crate-type = ["lib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[features]
default = ["tauri-app"]
tauri-app = ["dep:tauri", "dep:tauri-build"]

[dependencies]
tauri = { version = "2", features = [], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
csv = "1.3"
rand = "0.8"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hmac = "0.12"
argon2 = "0.5"
aes-gcm = "0.10"
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower-http = { version = "0.5", features = ["cors"] }
base64 = "0.22"
dirs-next = "2.0"
rayon = "1.10"

[dev-dependencies]
approx = "0.5"
tempfile = "3"
